Perkin-UAT/force-app/main/default/objects/FCO_Search__c/FCO_Search__c.object-meta.xml
<CustomObject>
    <label>FCO Search</label>
    <nameField>
        <displayFormat>FCOS-{000000}</displayFormat>
        <label>FCO Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCO Search</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>