Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CalculatedEnd_2__c.field-meta.xml
<CustomField>
    <fullName>CalculatedEnd_2__c</fullName>
    <label>CalculatedEnd 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>