Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CalculatedEnd_3__c.field-meta.xml
<CustomField>
    <fullName>CalculatedEnd_3__c</fullName>
    <label>CalculatedEnd 3</label>
    <length>15</length>
    <type>Text</type>
</CustomField>