Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CalculatedEnd_6__c.field-meta.xml
<CustomField>
    <fullName>CalculatedEnd_6__c</fullName>
    <label>CalculatedEnd 6</label>
    <length>15</length>
    <type>Text</type>
</CustomField>