Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CalculatedStart_1__c.field-meta.xml
<CustomField>
    <fullName>CalculatedStart_1__c</fullName>
    <label>CalculatedStart 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>