Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CalculatedStart_4__c.field-meta.xml
<CustomField>
    <fullName>CalculatedStart_4__c</fullName>
    <label>CalculatedStart 4</label>
    <length>15</length>
    <type>Text</type>
</CustomField>