Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CalculatedStart_5__c.field-meta.xml
<CustomField>
    <fullName>CalculatedStart_5__c</fullName>
    <label>CalculatedStart 5</label>
    <length>15</length>
    <type>Text</type>
</CustomField>