Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Conditional_Search__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Search__c</fullName>
    <label>Conditional Search</label>
    <length>50</length>
    <type>Text</type>
</CustomField>