Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CustomEnd_2__c.field-meta.xml
<CustomField>
    <fullName>CustomEnd_2__c</fullName>
    <label>CustomEnd 2</label>
    <length>14</length>
    <type>Text</type>
</CustomField>