Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CustomEnd_3__c.field-meta.xml
<CustomField>
    <fullName>CustomEnd_3__c</fullName>
    <label>CustomEnd 3</label>
    <length>14</length>
    <type>Text</type>
</CustomField>