Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CustomEnd_5__c.field-meta.xml
<CustomField>
    <fullName>CustomEnd_5__c</fullName>
    <label>CustomEnd 5</label>
    <length>14</length>
    <type>Text</type>
</CustomField>