Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CustomStart_1__c.field-meta.xml
<CustomField>
    <fullName>CustomStart_1__c</fullName>
    <label>CustomStart 1</label>
    <length>14</length>
    <type>Text</type>
</CustomField>