Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CustomStart_2__c.field-meta.xml
<CustomField>
    <fullName>CustomStart_2__c</fullName>
    <label>CustomStart 2</label>
    <length>14</length>
    <type>Text</type>
</CustomField>