Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/CustomStart_3__c.field-meta.xml
<CustomField>
    <fullName>CustomStart_3__c</fullName>
    <label>CustomStart 3</label>
    <length>14</length>
    <type>Text</type>
</CustomField>