Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/IdentifierType_1__c.field-meta.xml
<CustomField>
    <fullName>IdentifierType_1__c</fullName>
    <label>IdentifierType 1</label>
    <length>32</length>
    <type>Text</type>
</CustomField>