Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/IdentifierType_2__c.field-meta.xml
<CustomField>
    <fullName>IdentifierType_2__c</fullName>
    <label>IdentifierType 2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>