Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/IdentifierType_3__c.field-meta.xml
<CustomField>
    <fullName>IdentifierType_3__c</fullName>
    <label>IdentifierType 3</label>
    <length>32</length>
    <type>Text</type>
</CustomField>