Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Join_1__c.field-meta.xml
<CustomField>
    <fullName>Join_1__c</fullName>
    <label>Join 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>