Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Join_3__c.field-meta.xml
<CustomField>
    <fullName>Join_3__c</fullName>
    <label>Join 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>