Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Logic_1__c.field-meta.xml
<CustomField>
    <fullName>Logic_1__c</fullName>
    <label>Logic 1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>