Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Logic_2__c.field-meta.xml
<CustomField>
    <fullName>Logic_2__c</fullName>
    <label>Logic 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>