Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Logic_4__c.field-meta.xml
<CustomField>
    <fullName>Logic_4__c</fullName>
    <label>Logic 4</label>
    <length>2</length>
    <type>Text</type>
</CustomField>