Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MajorEnd_1__c.field-meta.xml
<CustomField>
    <fullName>MajorEnd_1__c</fullName>
    <label>MajorEnd 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>