Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MajorEnd_2__c.field-meta.xml
<CustomField>
    <fullName>MajorEnd_2__c</fullName>
    <label>MajorEnd 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>