Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MajorEnd_5__c.field-meta.xml
<CustomField>
    <fullName>MajorEnd_5__c</fullName>
    <label>MajorEnd 5</label>
    <length>10</length>
    <type>Text</type>
</CustomField>