Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MajorStart_2__c.field-meta.xml
<CustomField>
    <fullName>MajorStart_2__c</fullName>
    <label>MajorStart 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>