Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MajorStart_3__c.field-meta.xml
<CustomField>
    <fullName>MajorStart_3__c</fullName>
    <label>MajorStart 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>