Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MajorStart_4__c.field-meta.xml
<CustomField>
    <fullName>MajorStart_4__c</fullName>
    <label>MajorStart 4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>