Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MinorEnd_3__c.field-meta.xml
<CustomField>
    <fullName>MinorEnd_3__c</fullName>
    <label>MinorEnd 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>