Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MinorEnd_4__c.field-meta.xml
<CustomField>
    <fullName>MinorEnd_4__c</fullName>
    <label>MinorEnd 4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>