Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MinorStart_2__c.field-meta.xml
<CustomField>
    <fullName>MinorStart_2__c</fullName>
    <label>MinorStart 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>