Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/MinorStart_5__c.field-meta.xml
<CustomField>
    <fullName>MinorStart_5__c</fullName>
    <label>MinorStart 5</label>
    <length>10</length>
    <type>Text</type>
</CustomField>