Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/NativePartNumber1__c.field-meta.xml
<CustomField>
    <fullName>NativePartNumber1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NativePartNumber1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>FCOSearch</relationshipLabel>
    <relationshipName>FCOSearch4</relationshipName>
    <type>Lookup</type>
</CustomField>