Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/NativePartNumber2__c.field-meta.xml
<CustomField>
    <fullName>NativePartNumber2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NativePartNumber2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>FCOSearch</relationshipLabel>
    <relationshipName>FCOSearch5</relationshipName>
    <type>Lookup</type>
</CustomField>