Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/NativePartNumber3__c.field-meta.xml
<CustomField>
    <fullName>NativePartNumber3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NativePartNumber3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>FCOSearch</relationshipLabel>
    <relationshipName>FCOSearch6</relationshipName>
    <type>Lookup</type>
</CustomField>