Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product 1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>product1</relationshipLabel>
    <relationshipName>product1</relationshipName>
    <type>Lookup</type>
</CustomField>