Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Product_1_Attribute_2__c.field-meta.xml
<CustomField>
    <fullName>Product_1_Attribute_2__c</fullName>
    <label>Product 1 Attribute 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Linac Energies</fullName>
            </value>
            <value>
                <fullName>Version</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>