Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Product_1_SW_Build_End__c.field-meta.xml
<CustomField>
    <fullName>Product_1_SW_Build_End__c</fullName>
    <label>Product 1 SW Build End</label>
    <length>100</length>
    <type>Text</type>
</CustomField>