Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>product2</relationshipLabel>
    <relationshipName>product2</relationshipName>
    <type>Lookup</type>
</CustomField>