Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Product_2_Attribute_3__c.field-meta.xml
<CustomField>
    <fullName>Product_2_Attribute_3__c</fullName>
    <label>Product 2 Attribute 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Linac Energies</fullName>
            </value>
            <value>
                <fullName>Version</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>