Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Product_2_SW_Revision_Start__c.field-meta.xml
<CustomField>
    <fullName>Product_2_SW_Revision_Start__c</fullName>
    <label>Product 2 SW Revision Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>