Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Product_3__c.field-meta.xml
<CustomField>
    <fullName>Product_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product 3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>product3</relationshipLabel>
    <relationshipName>product3</relationshipName>
    <type>Lookup</type>
</CustomField>