Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Product_3_SW_Revision_End__c.field-meta.xml
<CustomField>
    <fullName>Product_3_SW_Revision_End__c</fullName>
    <label>Product 3 SW Revision End</label>
    <length>10</length>
    <type>Text</type>
</CustomField>