Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Product_Family_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_3__c</fullName>
    <label>Product Family 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>