Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/ProductName1__c.field-meta.xml
<CustomField>
    <fullName>ProductName1__c</fullName>
    <label>ProductName1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>