Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/ProductName2__c.field-meta.xml
<CustomField>
    <fullName>ProductName2__c</fullName>
    <label>ProductName2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>