Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/ProductName3__c.field-meta.xml
<CustomField>
    <fullName>ProductName3__c</fullName>
    <label>ProductName3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>