Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Restricted_to_Same_Product__c.field-meta.xml
<CustomField>
    <fullName>Restricted_to_Same_Product__c</fullName>
    <label>Restricted to Model Only</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>