Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/RevisionEnd_1__c.field-meta.xml
<CustomField>
    <fullName>RevisionEnd_1__c</fullName>
    <label>RevisionEnd 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>