Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/RevisionEnd_3__c.field-meta.xml
<CustomField>
    <fullName>RevisionEnd_3__c</fullName>
    <label>RevisionEnd 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>