Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/RevisionEnd_4__c.field-meta.xml
<CustomField>
    <fullName>RevisionEnd_4__c</fullName>
    <label>RevisionEnd 4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>