Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/RevisionStart_1__c.field-meta.xml
<CustomField>
    <fullName>RevisionStart_1__c</fullName>
    <label>RevisionStart 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>