Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/RevisionStart_3__c.field-meta.xml
<CustomField>
    <fullName>RevisionStart_3__c</fullName>
    <label>RevisionStart 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>