Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/RevisionStart_5__c.field-meta.xml
<CustomField>
    <fullName>RevisionStart_5__c</fullName>
    <label>RevisionStart 5</label>
    <length>10</length>
    <type>Text</type>
</CustomField>