Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <label>Schedule Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
            <value>
                <fullName>01:00 AM</fullName>
            </value>
            <value>
                <fullName>02:00 AM</fullName>
            </value>
            <value>
                <fullName>03:00 AM</fullName>
            </value>
            <value>
                <fullName>04:00 AM</fullName>
            </value>
            <value>
                <fullName>05:00 AM</fullName>
            </value>
            <value>
                <fullName>06:00 AM</fullName>
            </value>
            <value>
                <fullName>07:00 AM</fullName>
            </value>
            <value>
                <fullName>08:00 AM</fullName>
            </value>
            <value>
                <fullName>09:00 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>01:00 PM</fullName>
            </value>
            <value>
                <fullName>02:00 PM</fullName>
            </value>
            <value>
                <fullName>03:00 PM</fullName>
            </value>
            <value>
                <fullName>04:00 PM</fullName>
            </value>
            <value>
                <fullName>05:00 PM</fullName>
            </value>
            <value>
                <fullName>06:00 PM</fullName>
            </value>
            <value>
                <fullName>07:00 PM</fullName>
            </value>
            <value>
                <fullName>08:00 PM</fullName>
            </value>
            <value>
                <fullName>09:00 PM</fullName>
            </value>
            <value>
                <fullName>10:00 PM</fullName>
            </value>
            <value>
                <fullName>11:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>