Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Serial_2_Start__c.field-meta.xml
<CustomField>
    <fullName>Serial_2_Start__c</fullName>
    <label>Serial 2 Start</label>
    <length>100</length>
    <type>Text</type>
</CustomField>