Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Serial_3_End__c.field-meta.xml
<CustomField>
    <fullName>Serial_3_End__c</fullName>
    <label>Serial 3 End</label>
    <length>100</length>
    <type>Text</type>
</CustomField>