Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/SibexFCO_Id__c.field-meta.xml
<CustomField>
    <fullName>SibexFCO_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SibexFCO Id</label>
    <referenceTo>FCO__c</referenceTo>
    <relationshipLabel>FCOSearch</relationshipLabel>
    <relationshipName>FCOSearch3</relationshipName>
    <type>Lookup</type>
</CustomField>