Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>product7</relationshipLabel>
    <relationshipName>product7</relationshipName>
    <type>Lookup</type>
</CustomField>