Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Target_Product_SW_Build_End__c.field-meta.xml
<CustomField>
    <fullName>Target_Product_SW_Build_End__c</fullName>
    <label>Target Product SW Build End</label>
    <length>100</length>
    <type>Text</type>
</CustomField>