Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Target_Product_SW_Revision_Start__c.field-meta.xml
<CustomField>
    <fullName>Target_Product_SW_Revision_Start__c</fullName>
    <label>Target Product SW Revision Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>