Perkin-UAT/force-app/main/default/objects/FCO_Search__c/fields/Target_Serial_End__c.field-meta.xml
<CustomField>
    <fullName>Target_Serial_End__c</fullName>
    <label>Target Serial End</label>
    <length>100</length>
    <type>Text</type>
</CustomField>